<resources>
    <string name="app_name">Inventory</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_supplier_name">Supplier Name</string>
    <string name="hint_product_price">Price</string>
    <string name="unit_product_price">$</string>
    <string name="unknown_breed">Unknown Supplier Name</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="product_name_price_quantity_supplier_name_and_supplier_phone_are_required">product Name, Price, Quantity, Supplier Name and Supplier Phone are required</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="order">order</string>
    <string name="price">price $</string>
    <string name="available_on_store_unit">Available on store # unit</string>
    <string name="sale">sale</string>
</resources>
